# edge_puzzle

./: .gitignore  2x2_patterns_generator.py  analyze.py  backtracker.py  backtracking.py  backtracking_branching.py  backtracking_restarting.py  board.py  defs.py  disjunctive_find.py  divide_backtracking.py  eternity2_backtracking_restarting.bat  generate_stats.py  genetic_algorithm.py  monitor.py  play.py  puzzle_generator.py  readme.md  remove_nonmatching.py  remove_unmatching.py  replacing.py  requirements.txt  show_hints.py  show_pieces.py  solution_to_rotation.py  swaping.py  swapping.py  ui.py  validate.py
core/: board.py  defs.py
core_cpp/: Backtracker.cpp  Backtracker.h  Board.cpp  Board.h  Defs.cpp  Defs.h  PuzzleDef.cpp  PuzzleDef.h  Swapper.cpp  Swapper.h  core_cpp.sln  core_cpp.vcxproj  core_cpp.vcxproj.filters  main.cpp
cpp/: CMakeLists.txt  README.md  conanfile.txt  edge_puzzle.sln
cpp/backtracker/: Backtracker.cpp  Backtracker.h  CMakeLists.txt  MpfWrapper.cpp  MpfWrapper.h  Stack.cpp  Stack.h  backtracker.vcxproj  backtracker.vcxproj.filters  main.cpp
cpp/backtracker_fixed_path/: Backtracker.cpp  Backtracker.h  CMakeLists.txt  ColorAxisCounts.h  Stack.cpp  Stack.h  backtracker_fixed_path.vcxproj  backtracker_fixed_path.vcxproj.filters  main.cpp
cpp/core/: Board.cpp  Board.h  CMakeLists.txt  ColorAxisCounts.cpp  ColorAxisCounts.h  Defs.cpp  Defs.h  PuzzleDef.h  Stats.cpp  Stats.h  core_cpp.vcxproj  core_cpp.vcxproj.filters
cpp/scripts/: batch.bat  (+2 more)
experimenting/: 2x2_patterns_generator.py  2x2_patterns_to_disjunctive.py
ui/: ui.py
(+62 files in other folders)
